ignored user specific project files
Former-commit-id: 4191cffe160598012d3f4d5d87864a9077c01cff

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,4 @@
 MMapJson.xcodeproj/xcuserdata
 MMapJson.xcodeproj/project.xcworkspace/xcuserdata
+json.xcodeproj/xcuserdata
+json.xcodeproj/project.xcworkspace/xcuserdata
