--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@ MMapJson.xcodeproj/xcuserdata
 MMapJson.xcodeproj/project.xcworkspace/xcuserdata
 json.xcodeproj/xcuserdata
 json.xcodeproj/project.xcworkspace/xcuserdata
+json.xcodeproj/project.xcworkspace/xcshareddata
