--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,12 @@ json.xcodeproj/project.xcworkspace/xcshareddata
 Debug/
 *.sdf
 *.opensdf
+/bin
+/lib
+/CMakeFiles
+/.ninja_deps
+/.ninja_log
+/build.ninja
+/cmake_install.cmake
+/CMakeCache.txt
+/rules.ninja
